# api2ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  lint.yml
docs/developer_docs/: setup.md
infra/docker/: api_ingestion.Dockerfile  bridge.Dockerfile  nlp_engine.Dockerfile  registry.Dockerfile
src/ai_agent_bridge/src/: main.py
src/api_ingestion/src/: __init__.py  main.py
src/nlp_engine/src/: main.py
src/tool_registry/src/: main.py
