[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api2ai"
version = "0.1.0"
description = "Transform any API into an AI-ready tool"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["api", "ai", "nlp", "tools"]
authors = [
    { name = "API2AI Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openai>=1.3.7",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiohttp>=3.9.1",
    "tenacity>=8.2.3",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.6",
    "httpx>=0.25.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/api2ai"
Documentation = "https://api2ai.readthedocs.io/"
Repository = "https://github.com/yourusername/api2ai.git"
"Bug Tracker" = "https://github.com/yourusername/api2ai/issues"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py39"